# ChangeLog for net-zope/zope
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.164 2010/01/18 16:36:41 arfrever Exp $

*zope-2.12.3 (18 Jan 2010)

  18 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.12.3.ebuild:
  Version bump.

  16 Jan 2010; Christian Faulhammer <fauli@gentoo.org> zope-2.12.2.ebuild:
  keyworded ~arch for x86, bug 297734

*zope-2.12.2 (24 Dec 2009)

  24 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.12.2.ebuild, +files/zope-2.12.2-fix_syntax_error.patch:
  Version bump.

*zope-2.12.1 (13 Dec 2009)

  13 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.12.1.ebuild, +files/zope-2.12.1-fix_build.patch:
  Version bump (bug #287188).

  11 Sep 2009; Markus Meier <maekke@gentoo.org> zope-2.9.10-r1.ebuild,
  zope-2.10.7-r1.ebuild:
  amd64 stable, bug #278824

*zope-2.10.9 (04 Sep 2009)

  04 Sep 2009; Alfredo Tupone <tupone@gentoo.org> +zope-2.10.9.ebuild:
  Version bump to 2.10.9

  25 Aug 2009; Raúl Porcel <armin76@gentoo.org> zope-2.9.10-r1.ebuild,
  zope-2.10.7-r1.ebuild:
  sparc stable wrt #278824

  25 Aug 2009; Tobias Klausmann <klausman@gentoo.org> zope-2.9.10-r1.ebuild:
  Stable on alpha, bug #278824

  25 Aug 2009; Tobias Klausmann <klausman@gentoo.org> zope-2.10.7-r1.ebuild:
  Stable on alpha, bug #278824

  25 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  zope-2.9.10-r1.ebuild:
  stable x86, security bug 278824

  25 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  zope-2.10.7-r1.ebuild:
  stable x86, security bug 278824

  23 Aug 2009; nixnut <nixnut@gentoo.org> zope-2.9.10-r1.ebuild,
  zope-2.10.7-r1.ebuild:
  ppc stable #278824

*zope-2.10.7-r1 (17 Aug 2009)
*zope-2.9.10-r1 (17 Aug 2009)

  17 Aug 2009; Alex Legler <a3li@gentoo.org> +zope-2.9.10-r1.ebuild,
  +zope-2.10.7-r1.ebuild, +files/CVE-2009-0668+0669.patch: