@@ -11,11 +11,11 @@ DIST Zope2-2.12.3.tar.gz 1967467 RMD160 15715780ec17ccd5eff9bc803fc82e4f138f7b91
 EBUILD zope-2.10.7-r1.ebuild 2419 RMD160 a8eacc97fc3ec0d837e130c19b6160c51087054f SHA1 6cb14047b90e25b36582dc1b77296fd7033a1421 SHA256 b9fc3ccc0f925043e4999bc40d077ac3f927987fb72a4e2db3c1d2e9dac78f69
 EBUILD zope-2.10.7.ebuild 2378 RMD160 b5aec5e9ff6fc8081dff21d3ab5049929922712d SHA1 8a7d41e475abb6efd60b1212e8520f862d804f8b SHA256 641c43f253d26a75a926283f5a5c8dadc65797cf605984b5d1b185c1161e8845
 EBUILD zope-2.10.9.ebuild 2337 RMD160 7c7c5d215a96ecad33a10810e0d9c8e1d9dd9400 SHA1 b371ad3c5bfac6492b9c2c8483e3a00d60da3d3d SHA256 1dcd78b0751013e7b50fa9364ff2cf362a11046a7b824681c10395444cfc4889
-EBUILD zope-2.12.2.ebuild 4049 RMD160 22bcec4e9211834120872fb26a6c3dfb347d9ba4 SHA1 b44304e4cf3b3764ef09b9b0331b77d75c0648be SHA256 2a8f0139971aed9f979a131d4d6925b7330b014aea3d3b13eda8a9b79fd18e2d
-EBUILD zope-2.12.3.ebuild 4013 RMD160 03c8421e2f13b4589a9835e80aea6782fd3101ff SHA1 acc5bb4513454453e289e738237bf6930b7da634 SHA256 1f2d8219f361d0f691badcb37c41970ac3ef4610f8b070dc44ebe5209b3da44d
+EBUILD zope-2.12.2.ebuild 4052 RMD160 73df1c293f021f600c6aca1d78df3397d53f34a3 SHA1 93f91359a2500b969e645afbe6e39c1c0ed28dcb SHA256 7d0760a020199ba8a85ac82cc12cd998c369033d4b71bb4387c4d6bca0895389
+EBUILD zope-2.12.3.ebuild 4013 RMD160 e127520c5662b27a1aac077677ee0790dcb6635c SHA1 a8d4975ee89ac82b458de90d6ca70dad4083f569 SHA256 1053d964475a5645f0491b14d8743a4b9ecc51f5b7cdddcffc8007898002351f
 EBUILD zope-2.9.10-r1.ebuild 2439 RMD160 4d893fe82971f3d3a6b5bf47873c272ec732329b SHA1 930744cecdff3eed82705332bb505b9d5abbf486 SHA256 057741f43d33bd395e4bf69a1706931c5dcae18cd4f5e7e94d849a85dcde6345
 EBUILD zope-2.9.10.ebuild 2397 RMD160 e33501ae1658b572c23e9383492215c2af0cc5b1 SHA1 fabcdb45cce3c0ae12e3f77e12a2122f409f13ec SHA256 c2ccd01a1e47987ef0a82c2803decdb85bc189e955b2c6c6c62186c897164a04
 EBUILD zope-3.2.2.ebuild 3624 RMD160 e74adaedc41a265b71fd583d87b6f33b34448c0a SHA1 5632e19dc545b80c4ebe734119d81c39fe2b101e SHA256 82e0e16be113e8e2c7f4ca11ef1fa3dc24b96ca4a65161909c4c58999779d57d
 EBUILD zope-3.3.1.ebuild 3429 RMD160 4951ab3da1c9adc918f0a093a4bfac6deceba2b5 SHA1 5aefef7e3cf1cfc22674510ec6c78b4d8bcc6448 SHA256 7cc2aa03f0e77a65a6fc93aa01755a7eb41de30384366fd963172389606cc139
-MISC ChangeLog 25360 RMD160 05b7c084dcebac2d33926a924a78444998b8e245 SHA1 1fe2c48a555c175ce16b89530504a798c6fd7e1f SHA256 aef612a99ddcb60f41f9539259b4221f0bc59f12801618a57f07b158896af47c
+MISC ChangeLog 25491 RMD160 145d313f77e9aa486f1d4e53a3b4e139900eb244 SHA1 516f97eb696f2b9f9d5ec560ea6e589742bdb0b6 SHA256 8646c4ebc19214708d24d0d09b3bd3db9ba69390ceb850037507f16ed3e3df35
 MISC metadata.xml 161 RMD160 5e136d45f811478292bd2ee1798a9b0229ffe468 SHA1 9755179a2dee0511818b1f6738ded28e335e1b9a SHA256 e69ac7205cbc2e42a297e20d8f08922003390a345bbf50ccf00d1158a1c97cc5
