@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/zope-2.12.2.ebuild,v 1.2 2010/01/16 19:32:07 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/zope-2.12.2.ebuild,v 1.3 2010/02/10 08:16:22 tove Exp $
 
 EAPI="2"
 
@@ -92,7 +92,7 @@ src_prepare() {
 }
 
 src_compile() {
-	"$(PYTHON -2)" setup.py build || "Building failed"
+	"$(PYTHON -2)" setup.py build || die "Building failed"
 
 	if use doc; then
 		cd doc
