@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/zope-2.12.3.ebuild,v 1.1 2010/01/18 16:36:41 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/zope-2.12.3.ebuild,v 1.2 2010/02/10 08:16:22 tove Exp $
 
 EAPI="2"
 
@@ -89,7 +89,7 @@ pkg_setup() {
 }
 
 src_compile() {
-	"$(PYTHON -2)" setup.py build || "Building failed"
+	"$(PYTHON -2)" setup.py build || die "Building failed"
 
 	if use doc; then
 		cd doc
