@@ -1,6 +1,10 @@
 # ChangeLog for net-zope/zope
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.164 2010/01/18 16:36:41 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.165 2010/02/10 08:16:22 tove Exp $
+
+  10 Feb 2010; Torsten Veller <tove@gentoo.org> zope-2.12.2.ebuild,
+  zope-2.12.3.ebuild:
+  Add missing die: || "..." -> || die "..."
 
 *zope-2.12.3 (18 Jan 2010)
 
